--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
 		<artifactId>lombok</artifactId>
 		<scope>provided</scope>
 	</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.1.1</version>
+		</dependency>
 </dependencies>
 	<dependencyManagement>
 		<dependencies>
