--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 		<version>${mapstruct.version}</version>
 	</dependency>
 
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http45</artifactId>
+			<version>1.38.0</version>
+		</dependency>
+
 
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
